# oneworldsync_python

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  RELEASE.md  REST-API.md  TODO.md  commit_message.txt  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  version_update.py
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.rst  openapi.rst  swagger_search_model.txt
docs/api/: auth.rst  cli.rst  client.rst  content1_auth.rst  content1_client.rst  criteria.rst  exceptions.rst  models.rst  utils.rst
docs/dev/: contributing.rst  releasing.rst  testing.rst  vscode.rst
docs/user/: advanced_usage.rst  cli.rst  (+5 more)
examples/: .env.example  README.md  README_nutrition.md  advanced_search_example.py  advanced_search_test.py  content1_advanced_example.py  content1_example.py  date_range_example.py  debug_example.py  debug_search.py  direct_advanced_search.py  direct_example.py  django_food_nutrition_example.py  django_integration.py  django_nutrition_service.py  django_views.py  django_views_example.py  enhanced_search_example.py  exact_replica.py  extract_us_records.py  field_test.py  product_fetch_example.py  product_search_examples.py  search_example.py  simple_nutrition_example.py  test_django_nutrition_service.py
oneworldsync/: __init__.py  cli.py  client.py  content1_auth.py  content1_client.py  models.py  utils.py
openapi/: 1ws-content1-api-prod-openapi-3.0.1.json
swagger/: fullTextSearch-milk.json  fullTextSearch-milk.txt  preprod_swagger_fetch_model.json
tests/: README.md  conftest.py
